# random-problems

./: README.md  configure.ac  decTobin.c  factorial.c
src/: Makefile.am  addDigits.c  class1.cpp  decimalBinary.c  factRecursion.c  fibonacci.c  friend_class.cpp  inheritance.cpp  linkedList.c  reverseNum.c  stringreverse.c
src/c/: Makefile.am  armstrong.c  binarySearch.c  fibonacci.c  frequency.c  linkedList.c  palin_string.c  prime.c  randomNum.c  stringrev.c
src/c/bitwise/: Makefile.am  bitoperation.c  clearnthbit.c  insertAintoBbetjtoi.c  noOfbitconvertIntAtoB.c  powerof2.c  setnthbit.c  swap.c
src/c/linkedList/: Makefile.am
src/c/matrix/: Makefile.am  matrixAdd.c  matrixMulti.c  matrixSub.c  matrixTranspose.c
src/c/others/: Makefile.am  countPairwithDiff.c  diamond.c  palindrome.c  swap1.c  swap2.c
src/cpp/: friend_function.cpp  pure_virtual.cpp  virtual_function.cpp
src/linkedList/: linkList_creat.c
