dnl Process this file with autoconf to produce a configure script.
AC_INIT([random_problems], [0.0.1], [pabitraadhikari@gmail.com])
AM_INIT_AUTOMAKE([-Wall -Werror])
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 Makefile
 src/Makefile
 src/c/linkedList/Makefile
 src/c/others/Makefile
 src/c/matrix/Makefile
 src/c/matrix/Makefile
])
AC_OUTPUT
