bin_PROGRAMS = addDigits decTobin factorial factRecursion fibonacci palindrome reverseNum stringrev stringreverse linkedlist pointer1 binarySearch palinString randomNum diamond frequency armstrong
addDigits_SOURCES = addDigits.c
decTobin_SOURCES = decTobin.c
factorial_SOURCES = factorial.c
factRecursion_SOURCES = factRecursion.c
fibonacci_SOURCES = fibonacci.c
palindrome_SOURCES = palindrome.c
reverseNum_SOURCES = reverseNum.c
stringrev_SOURCES = stringrev.c
stringreverse_SOURCES = stringreverse
linkedin_SOURCES = linkedlist.c
pointer1_SOURCES = pointer1.c
binarySearch_SOURCES = binarySearch.c
palinString_SOURCES = palin_string.c
randomNum_SOURCES = randomNum.c
diamond_SOURCES = diamond.c
frequency_SOURCES = frequency.c
armstrong_SOURCES = armstrong.c

