bin_PROGRAMS = swap bitoperation setnthbit clearnthbit powerof2 noOfbitconvertIntAtoB insertAintoBbetjtoi
swap_SOURCES = swap.c
bitoperation_SOURCES = bitoperation.c
setnthbit_SOURCES = setnthbit.c
clearnthbit_SOURCES = clearnthbit.c
powerof2_SOURCES = powerof2.c
noOfbitconvertIntAtoB_SOURCES = noOfbitconvertIntAtoB.c
insertAintoBbetjtoi_SOURCES = insertAintoBbetjtoi.c